--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 BD_USERNAME=chicclosethenry
 DB_PASSWORD=jAkV4BRvDpJggoIX
+DB_URI=mongodb+srv://chicclosethenry:jAkV4BRvDpJggoIX@chiccloset.j5c8ltr.mongodb.net/?retryWrites=true&w=majority
