--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
