--- a/package.json
+++ b/package.json
@@ -1,42 +1,19 @@
 {
-  "name": "api",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
-  },
-  "author": "Henry",
-  "license": "ISC",
-  "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.1.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cloudinary": "^1.32.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-jwt": "^7.7.7",
-    "helmet": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^3.0.0",
-    "mercadopago": "1.5.11",
-    "mongoose": "^6.7.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0"
-  },
-  "devDependencies": {
-    "supertest-session": "^4.1.0",
-    "mocha": "^8.2.1",
-    "chai": "^4.2.0",
-    "nodemon": "^2.0.6",
-    "supertest": "^6.0.1"
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0"
   }
 }
