--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-BD_USERNAME=chicclosethenry
+nuevo .env =   BD_USERNAME=chicclosethenry
 DB_PASSWORD=jAkV4BRvDpJggoIX
-DB_URI=mongodb+srv://chicclosethenry:jAkV4BRvDpJggoIX@chiccloset.j5c8ltr.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://chicclosethenry:jAkV4BRvDpJggoIX@chiccloset.j5c8ltr.mongodb.net/chiccloset?retryWrites=true&w=majority
 SERVER_PORT=5000
