--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": "npm i && nodemon index.js",
+    "dev": "npm i && nodemon index.js"
   },
   "keywords": [],
   "author": "",
