--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "server": "cd server && npm i && npm run dev",
+        "demo":"cd demo && npm i && npm start",
         "client": "cd client && npm i && npm start"
     }
 }
