add auth passport

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,13 @@ nuevo .env =   BD_USERNAME=chicclosethenry
 DB_PASSWORD=jAkV4BRvDpJggoIX
 DB_URI=mongodb+srv://chicclosethenry:jAkV4BRvDpJggoIX@chiccloset.j5c8ltr.mongodb.net/chiccloset?retryWrites=true&w=majority
 SERVER_PORT=5000
+   
+# clave json web token  
+JWT_KEY= secret
+# credenciales google  
+CLIENT_ID_GOOGLE = 765328772048-cu105d4i8cb66i06c2fesgokq7lo4ehn.apps.googleusercontent.com
+CLIENT_SECRET_KEY_GOOGLE = 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
+
+# URLs
+BACK_URL = http://localhost:5000
+FRONT_URL = http://localhost:3000 
