--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,7 +14,10 @@
     "@auth0/auth0-react": "^2.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@mui/x-data-grid": "^6.2.0",
+    "@mui/x-data-grid-pro": "^6.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
     "cross-env": "^7.0.3",
