--- a/server/.env
+++ b/server/.env
@@ -14,7 +14,6 @@ AUTH0_CALLBACK_URL=http://localhost:3000/callback
 #gmail
 
 #stripe
-SERVER_PORT=5000
    
 # clave json web token  
 JWT_KEY= secret
@@ -24,6 +23,8 @@ CLIENT_SECRET_KEY_GOOGLE = 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
 
 # URLs
 BACK_URL = http://localhost:5000
-FRONT_URL = http://localhost:3000 
+FRONT_URL = http://localhost:3000
+DASHBOARD_URL = http://localhost:3001
+
 MERCADOPAGO_KEY=APP_USR-3799560281645771-041719-eaf169f9841de38f0076e1fff27ac4ad-1172423512
 EMAILPASS=ctpixsqrulounfhz
