--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -9,6 +9,12 @@ node_modules
 package-lock.json
 .env
 
+# firebase
+firebase.json
+firebase-debug.log
+.firebaserc
+build
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
