--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -13,6 +13,7 @@ package-lock.json
 firebase.json
 firebase-debug.log
 .firebaserc
+.firebase
 build
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
