--- a/Client/package.json
+++ b/Client/package.json
@@ -28,14 +28,10 @@
   "scripts": {
     "start": "npm i && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && firebase deploy"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   },
   "browserslist": {
     "production": [
@@ -48,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.1"
   }
 }
