--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.36.1",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "googleapis": "^118.0.0",
     "jwks-rsa": "^3.0.1",
     "mercadopago": "^1.5.15",
     "mongoose": "^7.0.3",
