--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,8 +22,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tremor/react": "^2.2.0",
     "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
