--- a/Client/package.json
+++ b/Client/package.json
@@ -12,7 +12,10 @@
     "@mui/material": "^5.12.0",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
+    "postcss-safe-parser": "^6.0.0",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
