--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "postcss-safe-parser": "^6.0.0",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
