--- a/Client/package.json
+++ b/Client/package.json
@@ -9,7 +9,8 @@
     "@mercadopago/sdk-react": "^0.0.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.76",
-    "@mui/material": "^5.12.0",
+    "@mui/lab": "^5.0.0-alpha.128",
+    "@mui/material": "^5.12.2",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
